--- a/boost/materials/index.html
+++ b/boost/materials/index.html
@@ -18,7 +18,7 @@
 
 <hr>
 <div class="spirit-nav">
-<a accesskey="p"  href="../index.html"><img src="../images/prev.png" alt="Prev"></a><a accesskey="u" href="../index.html"><img src="../images/up.png" alt="Up"></a><a accesskey="h" href="../index.html"><img src="../images/home.png" alt="Home"></a><a accesskey="n"  href="../overview/index.html"><img src="../images/next.png" alt="Next"></a>
+<a accesskey="p"  href="../overview/index.html"><img src="../images/prev.png" alt="Prev"></a><a accesskey="u" href="../index.html"><img src="../images/up.png" alt="Up"></a><a accesskey="h" href="../index.html"><img src="../images/home.png" alt="Home"></a><a accesskey="n"  href="../tutorial/index.html"><img src="../images/next.png" alt="Next"></a>
 </div>
 
 <div class="chapter">
@@ -39,6 +39,11 @@
 <p><a href="https://www.youtube.com/embed/IKD2-MAkXyQ">https://www.youtube.com/embed/IKD2-MAkXyQ</a></p>
 <hr />
 <ul>
+<li><strong>Design Patterns in C++: Creational</strong></li>
+</ul>
+<p><a href="https://www.pluralsight.com/courses/design-patterns-cpp-creational">https://www.pluralsight.com/courses/design-patterns-cpp-creational</a></p>
+<hr />
+<ul>
 <li><strong>The Clean Code Talks - Don't Look For Things!</strong></li>
 </ul>
 <p><a href="https://www.youtube.com/embed/RlfLCWKxHJ0">https://www.youtube.com/embed/RlfLCWKxHJ0</a></p>
@@ -52,6 +57,7 @@
 <ul>
 <li>MeetingC++ 2016: <strong>TDD/BDD and Dependency Injection</strong></li>
 </ul>
+<p><a href="https://www.youtube.com/watch?v=T3uMcxhzRUE">https://www.youtube.com/watch?v=T3uMcxhzRUE</a></p>
 <p><a href="http://boost-experimental.github.io/di/meetingcpp-2016">Slides</a></p>
 <hr />
 <ul>
@@ -84,7 +90,7 @@ hljs.initHighlightingOnLoad();
 
 <hr>
 <div class="spirit-nav">
-<a accesskey="p"  href="../index.html"><img src="../images/prev.png" alt="Prev"></a><a accesskey="u" href="../index.html"><img src="../images/up.png" alt="Up"></a><a accesskey="h" href="../index.html"><img src="../images/home.png" alt="Home"></a><a accesskey="n"  href="../overview/index.html"><img src="../images/next.png" alt="Next"></a>
+<a accesskey="p"  href="../overview/index.html"><img src="../images/prev.png" alt="Prev"></a><a accesskey="u" href="../index.html"><img src="../images/up.png" alt="Up"></a><a accesskey="h" href="../index.html"><img src="../images/home.png" alt="Home"></a><a accesskey="n"  href="../tutorial/index.html"><img src="../images/next.png" alt="Next"></a>
 </div>
 
 <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
