--- a/boost/FAQ/index.html
+++ b/boost/FAQ/index.html
@@ -93,7 +93,7 @@ Please, check out <a href="../extensions/index.html#xml-injection">XML Extension
 <h3 id="since-boostdi-has-a-compile-time-approach-can-i-have-dynamic-bindings">Since [Boost].DI has a compile time approach can I have dynamic bindings?</h3>
 Yes, [Boost].DI supports dynamic bindings.</li>
 </ul>
-<pre><code class="cpp">auto use_gui_view = ...;
+<pre><code class="cpp">auto use_gui_view = true/false;
 
 auto injector = di::make_injector(
   di::bind&lt;iview&gt;.to([&amp;](const auto&amp; injector) -&gt; iview&amp; {
