--- a/boost/CHANGELOG/index.html
+++ b/boost/CHANGELOG/index.html
@@ -18,7 +18,7 @@
 
 <hr>
 <div class="spirit-nav">
-<a accesskey="p"  href="../FAQ/index.html"><img src="../images/prev.png" alt="Prev"></a><a accesskey="u" href="../index.html"><img src="../images/up.png" alt="Up"></a><a accesskey="h" href="../index.html"><img src="../images/home.png" alt="Home"></a><a accesskey="n"  href="../TODO/index.html"><img src="../images/next.png" alt="Next"></a>
+<a accesskey="p"  href="../FAQ/index.html"><img src="../images/prev.png" alt="Prev"></a><a accesskey="u" href="../index.html"><img src="../images/up.png" alt="Up"></a><a accesskey="h" href="../index.html"><img src="../images/home.png" alt="Home"></a><a accesskey="n"  ><img src="../images/next.png" alt="Next"></a>
 </div>
 
 <div class="chapter">
@@ -92,6 +92,15 @@
 <li>C++03/C++11 version</li>
 <li>Support for Clang3.2+</li>
 </ul>
+<hr />
+<ul>
+<li>
+<p>TODO</p>
+<ul>
+<li><a href="https://waffle.io/boost-experimental/di">https://waffle.io/boost-experimental/di</a></li>
+</ul>
+</li>
+</ul>
 </div>
 
 <script src="../js/highlight.pack.js"></script>
@@ -112,7 +121,7 @@ hljs.initHighlightingOnLoad();
 
 <hr>
 <div class="spirit-nav">
-<a accesskey="p"  href="../FAQ/index.html"><img src="../images/prev.png" alt="Prev"></a><a accesskey="u" href="../index.html"><img src="../images/up.png" alt="Up"></a><a accesskey="h" href="../index.html"><img src="../images/home.png" alt="Home"></a><a accesskey="n"  href="../TODO/index.html"><img src="../images/next.png" alt="Next"></a>
+<a accesskey="p"  href="../FAQ/index.html"><img src="../images/prev.png" alt="Prev"></a><a accesskey="u" href="../index.html"><img src="../images/up.png" alt="Up"></a><a accesskey="h" href="../index.html"><img src="../images/home.png" alt="Home"></a><a accesskey="n"  ><img src="../images/next.png" alt="Next"></a>
 </div>
 
 <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
