--- a/boost/overview/index.html
+++ b/boost/overview/index.html
@@ -154,7 +154,7 @@ namespace di = boost::di;
 </ul>
 <h3 id="performance">Performance</h3>
 <ul>
-<li>[Boost].DI has none run-time overhead and compiles faster than Java's DI frameworks. Check <a href="benchmark.md"><code>Benchmarks</code></a> to see more.</li>
+<li>[Boost].DI has none run-time overhead and compiles faster than Java's DI frameworks. Check <a href="../benchmarks/index.html"><code>Benchmarks</code></a> to see more.</li>
 </ul>
 <hr />
 </div>
